@@ -1,8 +1,11 @@
 from functools import wraps
+
 from django.shortcuts import redirect
 from django.contrib import messages
+from django.http import HttpResponseRedirect
 from django.utils.translation import ugettext_lazy as _
 from django.utils.decorators import available_attrs
+
 
 __all__ = ('path_manager_required',
            'trekking_manager_required',
@@ -54,13 +57,19 @@ def same_structure_required(redirect_to):
         @wraps(view_func, assigned=available_attrs(view_func))
         def _wrapped_view(self, request, *args, **kwargs):
             result = view_func(self, request, *args, **kwargs)
+
             # Superuser is always allowed
             if request.user.is_superuser:
                 return result
+
+            if isinstance(result, HttpResponseRedirect):
+                return result
+
             obj = hasattr(self, 'get_object') and self.get_object() or getattr(self, 'object', None)
             if obj.same_structure(request.user):
                 return result
             messages.warning(request, _(u'Access to the requested resource is restricted by structure. You have been redirected.'))
+
             return redirect(redirect_to, *args, **kwargs)
         return _wrapped_view
     return decorator
